# WritingTools

./: .gitignore  Media Coverage.md  README.md  WritingToolApp.py  aiprovider.py  build_script.py  main.py  pyinstaller-build-script.py  requirements.txt
Windows_and_Linux/: README.md  Writing Tools.spec  WritingToolApp.py  aiprovider.py  build-deb.sh  create_translation.sh  default-options.json  install-local-linux.sh  launch.ps1  main.py  note perso.md  options.json  options_examples.json  pyinstaller-build-script.py  pyproject.toml  requirements.txt  run.bat  run.sh  test_comprehensive_wayland.py  test_enhanced_wayland.py  test_final_complete.py  test_final_solution.py  update_checker.py
Windows_and_Linux/backends/: gui_backend.py  wayland_backend.py  wayland_backend_new.py  x11_backend.py
Windows_and_Linux/locales/: messages.po
Windows_and_Linux/locales/en/LC_MESSAGES/: messages.mo  messages.po  messages.po~
Windows_and_Linux/locales/he/LC_MESSAGES/: messages.po
Windows_and_Linux/locales/it/LC_MESSAGES/: messages.mo  messages.po
Windows_and_Linux/pot_files/: AboutWindow.pot  CustomPopupWindow.pot  OnboardingWindow.pot  ResponseWindow.pot  SettingsWindow.pot  WritingToolApp.pot  merged.pot
Windows_and_Linux/scripts/: __init__.py  dev-build.py  final-build.py  launch.ps1  launch.py  launch.sh  utils.py
Windows_and_Linux/scripts/batch/: launch.bat  launch.sh
Windows_and_Linux/ui/: AboutWindow.py  AutostartManager.py  CustomPopupWindow.py  NonEditableModal.py  OnboardingWindow.py  ResponseWindow.py  SettingsWindow.py  UIUtils.py  config.json
(+199 files in other folders)
